--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Collection Catalog</string>
+    <string name="back_button">Back</string>
+    <string name="collection_is_empty">The collection is empty</string>
 </resources>
