--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Collection Catalog</string>
     <string name="back_button">Back</string>
     <string name="collection_is_empty">The collection is empty</string>
+    <string name="country">Country</string>
+    <string name="number">Number</string>
+    <string name="Type">Type</string>
 </resources>
