--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
-<resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Collection Catalog</string>
-    <string name="back_button">Back</string>
-    <string name="collection_is_empty">The collection is empty</string>
-    <string name="country">Country</string>
-    <string name="number">Number</string>
-    <string name="type">Type</string>
-    <string name="title">Title</string>
+    <string name="settings">Settings</string>
+    <string name="no_image">No image</string>
+    <string name="press_to_add_image">Press here to select an image</string>
+    <string name="press_to_change_image">Change the image by pressing on it</string>
+    <string name="add_item_title">Add new</string>
+    <string name="edit_item_title">Edit <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
+    <string name="save_added_item">Add <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
+    <string name="save_edited_item">Save <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
 </resources>
