--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -9,4 +9,8 @@
     <string name="edit_item_title">Muokkaa <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
     <string name="save_added_item">Lisää <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
     <string name="save_edited_item">Tallenna <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
+    <string name="yes">Kyllä</string>
+    <string name="no">Ei</string>
+    <string name="delete">Poista</string>
+    <string name="deletion_dialog">Oletko varma?</string>
 </resources>
