--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="edit_item_title">Edit <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
     <string name="save_added_item">Add <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
     <string name="save_edited_item">Save <xliff:g name="item_title" example="ABC-123">%s</xliff:g></string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="delete">Delete</string>
+    <string name="deletion_dialog">Are you sure?</string>
 </resources>
