Unifying ItemEntry and ItemSummary in terms of UI

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -13,4 +13,5 @@
     <string name="no">Ei</string>
     <string name="delete">Poista</string>
     <string name="deletion_dialog">Oletko varma?</string>
+    <string name="source">Lähde</string>
 </resources>
