--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="no">No</string>
     <string name="delete">Delete</string>
     <string name="deletion_dialog">Are you sure?</string>
+    <string name="source">Source</string>
 </resources>
