--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="delete">Delete</string>
     <string name="deletion_dialog">Are you sure?</string>
     <string name="source">Source</string>
+    <string name="period">Period</string>
+    <string name="year">Year</string>
+    <string name="reg_no">Reg. No.</string>
+    <string name="date">Date</string>
+    <string name="value">Value</string>
+    <string name="type">Type</string>
 </resources>
