--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="filter">Filter</string>
     <string name="cancel">Cancel</string>
     <string name="cost">Cost</string>
+    <string name="image_loading">Loading image</string>
+    <string name="loading">Loading</string>
 </resources>
