--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -39,4 +39,5 @@
     <string name="sort_by_country_and_type_desc">Valtio ja tyyppi, laskeva</string>
     <string name="reset">Nollaa</string>
     <string name="filter_apply">Käytä</string>
+    <string name="statistics">Tilastot</string>
 </resources>
