--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="sort_by_country_and_type_desc">Country &amp; Type, descending</string>
     <string name="reset">Reset</string>
     <string name="filter_apply">Apply</string>
+    <string name="statistics">Statistics</string>
 </resources>
