--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -48,4 +48,11 @@
         <item quantity="other">プレートが%d枚</item>
     </plurals>
     <string name="statistics_intro_empty">プレートがない。</string>
+    <string name="width">横</string>
+    <string name="height">縦</string>
+    <string name="weight">目方</string>
+    <string name="condition">状態</string>
+    <string name="location">位置</string>
+    <string name="vehicle">車両</string>
+    <string name="notes">ノート</string>
 </resources>
