Countries table in Stats to sort by count in countries instead of alphabetically

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -56,4 +56,7 @@
     <string name="location">Sijainti</string>
     <string name="vehicle">Ajoneuvo</string>
     <string name="notes">Lisätietoja</string>
+    <string name="labels">Tunnisteet</string>
+    <string name="edit">Muokkaa</string>
+    <string name="create_label">Luo uusi tunniste</string>
 </resources>
