UI for Settings, namely for Default sort order

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -59,4 +59,5 @@
     <string name="labels">Tunnisteet</string>
     <string name="edit">Muokkaa</string>
     <string name="create_label">Luo uusi tunniste</string>
+    <string name="default_sort_by">Oletusjärjestys</string>
 </resources>
