--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="filter_apply">Apply</string>
     <string name="statistics">Statistics</string>
     <string name="discard_dialog_title">Discard changes?</string>
-    <string name="discard_dialog_text">Changes made remain unsaved.</string>
+    <string name="discard_dialog_text">Changes have not been saved.</string>
     <string name="discard">Discard</string>
     <string name="keep_editing">Keep editing</string>
     <plurals name="statistics_intro">
@@ -59,4 +59,5 @@
     <string name="labels">Labels</string>
     <string name="edit">Edit</string>
     <string name="create_label">Create new label</string>
+    <string name="default_sort_by">Default sort order</string>
 </resources>
