--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="cancel">Cancel</string>
     <string name="cost">Cost</string>
     <string name="image_loading">Loading image</string>
-    <string name="loading">Loading</string>
+    <string name="loading">Loading...</string>
     <string name="country">Country</string>
     <string name="region">Region</string>
     <string name="area">Area</string>
@@ -73,4 +73,5 @@
     <string name="color">Color</string>
     <string name="color_main">Color, Base</string>
     <string name="color_secondary">Color, Characters</string>
+    <string name="is_empty_message">Nothing to display.</string>
 </resources>
