--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -76,4 +76,5 @@
     <string name="is_empty_message">Ei näytettävää.</string>
     <string name="collections">Kokoelmat</string>
     <string name="create_collection">Luo uusi kokoelma</string>
+    <string name="edit_collections">Muokkaa kokoelmia</string>
 </resources>
