--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="is_empty_message">Nothing to display.</string>
     <string name="collections">Collections</string>
     <string name="create_collection">Create new collection</string>
+    <string name="edit_collections">Edit collections</string>
 </resources>
