--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -77,4 +77,5 @@
     <string name="collections">Kokoelmat</string>
     <string name="create_collection">Luo uusi kokoelma</string>
     <string name="edit_collections">Muokkaa kokoelmia</string>
+    <string name="emoji">Emoji</string>
 </resources>
