--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -76,4 +76,5 @@
     <string name="collections">コレクション</string>
     <string name="create_collection">新しいコレクションを作成</string>
     <string name="edit_collections">コレクションを編集</string>
+    <string name="emoji">絵文字</string>
 </resources>
