Add navigation to individual Collections via the navigation drawer. HomeScreen now gets populated based on the selected Collection

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -78,4 +78,5 @@
     <string name="create_collection">Luo uusi kokoelma</string>
     <string name="edit_collections">Muokkaa kokoelmia</string>
     <string name="emoji">Emoji</string>
+    <string name="all_plates">Kaikki kilvet</string>
 </resources>
