--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="create_collection">Create new collection</string>
     <string name="edit_collections">Edit collections</string>
     <string name="emoji">Emoji</string>
+    <string name="all_plates">All plates</string>
 </resources>
