--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -77,5 +77,9 @@
     <string name="create_collection">新しいコレクションを作成</string>
     <string name="edit_collections">コレクションを編集</string>
     <string name="emoji">絵文字</string>
-    <string name="all_plates">すべてのプレート</string>
+    <string name="all_plates">全てのプレート</string>
+    <string name="copy">コピー</string>
+    <string name="select_all">すべて選択</string>
+    <string name="include_image">画像を含める</string>
+    <string name="copy_dialog_empty_value">空</string>
 </resources>
