--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,8 @@
     <string name="edit_collections">Edit collections</string>
     <string name="emoji">Emoji</string>
     <string name="all_plates">All plates</string>
+    <string name="copy">Copy</string>
+    <string name="select_all">Select all</string>
+    <string name="include_image">Include image</string>
+    <string name="copy_dialog_empty_value">Empty</string>
 </resources>
