--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -50,11 +50,11 @@
     <string name="statistics_intro_empty">プレートがない。</string>
     <string name="width">横</string>
     <string name="height">縦</string>
-    <string name="weight">目方</string>
+    <string name="weight">重量</string>
     <string name="condition">状態</string>
     <string name="location">位置</string>
     <string name="vehicle">車両</string>
-    <string name="notes">ノート</string>
+    <string name="notes">詳細</string>
     <string name="labels">ラベル</string>
     <string name="edit">編集</string>
     <string name="create_label">新しいラベルを作成</string>
@@ -77,9 +77,28 @@
     <string name="create_collection">新しいコレクションを作成</string>
     <string name="edit_collections">コレクションを編集</string>
     <string name="emoji">絵文字</string>
-    <string name="all_plates">全てのプレート</string>
+    <string name="all_plates">すべてのプレート</string>
     <string name="copy">コピー</string>
     <string name="select_all">すべて選択</string>
     <string name="include_image">画像を含める</string>
     <string name="copy_dialog_empty_value">空</string>
+    <string name="add_image">画像を追加</string>
+    <string name="change_image">画像を換える</string>
+    <string name="remove_image">画像を削除</string>
+    <string name="physical_attributes">属性</string>
+    <string name="details">詳細</string>
+    <string name="alias">通称</string>
+    <string name="source_name">名称</string>
+    <string name="source_alias">通称</string>
+    <string name="source_type">方法</string>
+    <string name="source_details">詳細</string>
+    <string name="source_country">原産国</string>
+    <string name="archival">アーカイバル</string>
+    <string name="archival_date">日付</string>
+    <string name="archival_reason">理由</string>
+    <string name="sold_price">価格</string>
+    <string name="archival_details">詳細</string>
+    <string name="recipient_name">送り先</string>
+    <string name="recipient_alias">通称</string>
+    <string name="recipient_country">送り先の国</string>
 </resources>
