--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -102,4 +102,5 @@
     <string name="recipient_name">Vastaanottajan nimi</string>
     <string name="recipient_alias">Alias</string>
     <string name="recipient_country">Kohdemaa</string>
+    <string name="paste">Liitä</string>
 </resources>
