--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,5 @@
     <string name="recipient_name">Recipient name</string>
     <string name="recipient_alias">Alias</string>
     <string name="recipient_country">Destination country</string>
+    <string name="paste">Paste</string>
 </resources>
