Enable per-app language support

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -103,4 +103,6 @@
     <string name="recipient_alias">Alias</string>
     <string name="recipient_country">Kohdemaa</string>
     <string name="paste">Liitä</string>
+    <string name="language">Kieli</string>
+    <string name="lang_system_default">Järjestelmän oletus</string>
 </resources>
