--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -102,4 +102,6 @@
     <string name="recipient_alias">通称</string>
     <string name="recipient_country">送り先の国</string>
     <string name="paste">貼り付け</string>
+    <string name="language">言語</string>
+    <string name="lang_system_default">システムのデフォルト</string>
 </resources>
