--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -104,4 +104,6 @@
     <string name="paste">貼り付け</string>
     <string name="language">言語</string>
     <string name="lang_system_default">システムのデフォルト</string>
+    <string name="continue_button">続ける</string>
+    <string name="language_redirect_text">アプリの言語を変更するために、デバイスのシステム設定に遷移します。</string>
 </resources>
