Add userCountry to UserPreferences, and the ability to manage this through the SettingsScreen

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -107,4 +107,5 @@
     <string name="lang_system_default">Järjestelmän oletus</string>
     <string name="continue_button">Jatka</string>
     <string name="language_redirect_text">Sinut ohjataan laitteen järjestelmäasetuksiin sovelluksen kielen vaihtamista varten.</string>
+    <string name="user_country">Sijainti</string>
 </resources>
