--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,6 @@
     <string name="ok_text" translatable="false">OK</string>
     <string name="continue_button">Continue</string>
     <string name="language_redirect_text">In order to change the app language, you will be redirected to the device\'s system settings.</string>
+    <string name="missing_translation" translatable="false">MISSING TRANSLATION</string>
+    <string name="user_country">Country</string>
 </resources>
