Cost and Value in ItemSummary are formatted based on the userCountry from UserPreferences

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -108,4 +108,7 @@
     <string name="continue_button">Jatka</string>
     <string name="language_redirect_text">Sinut ohjataan laitteen järjestelmäasetuksiin sovelluksen kielen vaihtamista varten.</string>
     <string name="user_country">Sijainti</string>
+    <string name="default_setting">Oletus</string>
+    <string name="currency">Valuutta</string>
+    <string name="currency_unit">Valuuttayksikkö</string>
 </resources>
