--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -107,4 +107,7 @@
     <string name="continue_button">続ける</string>
     <string name="language_redirect_text">アプリの言語を変更するために、デバイスのシステム設定に遷移します。</string>
     <string name="user_country">国や地域</string>
+    <string name="default_setting">デフォルト</string>
+    <string name="currency">通貨</string>
+    <string name="currency_unit">通貨単位</string>
 </resources>
